tests/compile_error/get_slice.stderr
error: field with #[get(slice)] should be a Vec<T> or an array [T; N] type
 --> tests/compile_error/get_slice.rs:6:12
  |
6 |     field: usize,
  |            ^^^^^
